--- a/main.tex
+++ b/main.tex
@@ -13,17 +13,17 @@
 \lhead{}
 
 
-\usepackage{lipsum,fancyhdr}
-\pagestyle{fancy}
-\renewcommand{\sectionmark}[1]{\markboth{#1}{}} % set the \leftmark
-\fancyhf{}% Clear header/footer
-\fancyhead[L]{\leftmark} % 1. sectionname
-\fancyfoot[C]{\thepage}
-\fancypagestyle{plain}{% Redefine plain pages tyle
-	\fancyhf{}% Clear header/footer
-	\renewcommand{\headrulewidth}{0.0pt}%
-	\fancyfoot[C]{\thepage}
-}
+%\usepackage{lipsum,fancyhdr}
+%\pagestyle{fancy}
+%\renewcommand{\sectionmark}[1]{\markboth{#1}{}} % set the \leftmark
+%\fancyhf{}% Clear header/footer
+%\fancyhead[L]{\leftmark} % 1. sectionname
+%\fancyfoot[C]{\thepage}
+%\fancypagestyle{plain}{% Redefine plain pages tyle
+%	\fancyhf{}% Clear header/footer
+%	\renewcommand{\headrulewidth}{0.0pt}%
+%	\fancyfoot[C]{\thepage}
+%}
 
 \usepackage[DIV=14,BCOR=2mm,headinclude=true,footinclude=false]{typearea}
 \usepackage[T1]{fontenc}
