--- a/main.tex
+++ b/main.tex
@@ -1,17 +1,13 @@
 \documentclass[12pt,oneside]{book}
 \usepackage{lipsum}
-\usepackage[dvips,xetex]{graphicx}
-%\usepackage[margin=1in]{geometry} 
+\usepackage[dvips,xetex]{graphicx} 
 \usepackage[top=3cm, bottom=3cm, left=2.5cm, right=4cm]{geometry}
 \geometry{a4paper}
 \graphicspath{{images/}}
 \usepackage{fancyhdr}
 \pagestyle{fancy}
-\fancyhead[L]{left}
-\fancyhead[R]{right}
 \cfoot{\thepage}
 \lhead{}
-
 \usepackage[DIV=14,BCOR=2mm,headinclude=true,footinclude=false]{typearea}
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
@@ -20,12 +16,10 @@
 \usepackage[extrafootnotefeatures]{xepersian}
 \linespread{1.5}
 \renewcommand{\footnotesize}{\normalsize}
-\settextfont{IRANSans}
-%\settextfont{BZar}
-%\setlatintextfont{Times New Roman}
+\settextfont{Vazir}
+\setlatintextfont{TimesNewerRoman-Regular}
 \title{\textbf{خودآموز زبان C}}
 \author{سعید}
-
 \begin{document}
 \paragraphfootnotes
 \begin{figure}
