--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
 \usepackage{color}
 \usepackage[extrafootnotefeatures]{xepersian}
 \linespread{1.5}
+\selectfont
 \renewcommand{\footnotesize}{\normalsize}
 \settextfont{Vazir}
 \setlatintextfont{TimesNewerRoman-Regular}
