added space between main text and footnote

--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,5 @@
 \documentclass[12pt,oneside]{book}
+\addtolength{\skip\footins}{1pc plus 5pt}
 \usepackage{lipsum}
 \usepackage[dvips,xetex]{graphicx} 
 \usepackage[top=3cm, bottom=3cm, left=2.5cm, right=4cm]{geometry}
