additions and some revise

--- a/main.tex
+++ b/main.tex
@@ -18,7 +18,8 @@
 \linespread{1.5}
 \selectfont
 \renewcommand{\footnotesize}{\normalsize}
-\settextfont{Vazir}
+%\settextfont{Vazir}
+\settextfont{IRANSansWeb}
 \setlatintextfont{TimesNewerRoman-Regular}
 \title{\textbf{خودآموز زبان C}}
 \author{سعید}
