--- a/main.tex
+++ b/main.tex
@@ -20,7 +20,7 @@
 \renewcommand{\footnotesize}{\normalsize}
 %\settextfont{Vazir}
 \settextfont{IRANSansWeb}
-\setlatintextfont{TimesNewerRoman-Regular}
+%\setlatintextfont{TimesNewerRoman-Regular}
 \title{\textbf{خودآموز زبان C}}
 \author{سعید}
 \begin{document}
@@ -37,7 +37,4 @@
 \input{chapters/preface}
 \pagenumbering{arabic}
 \input{chapters/ch1}
-\input{chapters/ch2}
-\input{chapters/ch3}
-\input{chapters/ch4}
 \end{document}
