--- a/main.tex
+++ b/main.tex
@@ -20,15 +20,15 @@
 \renewcommand{\footnotesize}{\normalsize}
 %\settextfont{Vazir}
 \settextfont{IRANSansWeb}
-%\setlatintextfont{TimesNewerRoman-Regular}
+%\setlatintextfont{times new roman}
 \title{\textbf{خودآموز زبان C}}
-\author{سعید}
+\author{}
 \begin{document}
 \paragraphfootnotes
-\begin{figure}
-\centering
-\includegraphics[width=150mm]{c_artwork}
-\end{figure}
+%\begin{figure}
+%\centering
+%\includegraphics[width=150mm]{c_artwork}
+%\end{figure}
 \clearpage\maketitle
 \thispagestyle{empty}
 \pagenumbering{Alph}
